--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/beads-io.jar" sourcepath="/Beads Tutorial Project/src/beads_io"/>
-	<classpathentry kind="lib" path="lib/beads.jar" sourcepath="/Beads Tutorial Project/src/beads_main"/>
+	<classpathentry kind="lib" path="lib/beads-io.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.beadsproject.net/doc"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/beads.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.beadsproject.net/doc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/jarjar-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jl1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jna.jar"/>
