add gervill demo, remove many libs from build path

--- a/.classpath
+++ b/.classpath
@@ -12,16 +12,6 @@
 			<attribute name="javadoc_location" value="http://www.beadsproject.net/doc"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jarjar-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jl1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/jna.jar"/>
-	<classpathentry kind="lib" path="lib/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="lib/org-jaudiolibs-audioservers-jack.jar"/>
-	<classpathentry kind="lib" path="lib/org-jaudiolibs-audioservers-javasound.jar"/>
-	<classpathentry kind="lib" path="lib/org-jaudiolibs-audioservers.jar"/>
-	<classpathentry kind="lib" path="lib/org-jaudiolibs-jnajack.jar"/>
-	<classpathentry kind="lib" path="lib/tools.jar"/>
-	<classpathentry kind="lib" path="lib/tritonus_aos-0.3.6.jar"/>
-	<classpathentry kind="lib" path="lib/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="lib/gervill.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
