--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 			<attribute name="javadoc_location" value="https://gervill.java.net/javadoc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Gervill4Beads"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
